--- a/destacados/index.html
+++ b/destacados/index.html
@@ -21,6 +21,15 @@
   <!-- Custom styles for this template -->
   <link href="../css/clean-blog.css" rel="stylesheet">
 
+<style>
+    .imagen-responsiva{
+    display:inline-flex;
+    max-width: 100%;
+    height: auto;
+    
+  }
+</style>
+
 </head>
 
 <body>
@@ -70,27 +79,79 @@
   </nav>
 
   <!-- Page Header -->
-  <header class="masthead" style="background-image: url('img/about-bg.jpg')">
+  <header class="masthead" style="background-image: url('../img/dest/principal.jpeg')">
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="page-heading">
-            <h1>About Me</h1>
-            <span class="subheading">This is what I do.</span>
+            <h1>Destacados</h1>
           </div>
         </div>
       </div>
     </div>
   </header>
 
-  <!-- Main Content -->
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-8 col-md-10 mx-auto">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur voluptates odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam ducimus consectetur?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius praesentium recusandae illo eaque architecto error, repellendus iusto reprehenderit, doloribus, minus sunt. Numquam at quae voluptatum in officia voluptas voluptatibus, minus!</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut consequuntur magnam, excepturi aliquid ex itaque esse est vero natus quae optio aperiam soluta voluptatibus corporis atque iste neque sit tempora!</p>
+<!-- Contenido principal -->
+<div class="container">
+  <div class="row">
+    <div class="col-lg-8 col-md-10 mx-auto">
+      
+      <ul class="list-unstyled">
+        <li class="media">
+          <img src="../img/dest/modmovsal.JPG" class="align-self-center mr-3" width="250" alt="...">
+          <div class="media-body">
+            <h5 class="mt-0 mb-1">Modulo movil de salud</h5>
+            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+          </div>
+        </li>
+        <li class="media my-4">
+          <div class="media">
+            <div class="media-body">
+              <h5 class="mt-0 mb-1">Casa de interés social</h5>
+              Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+            </div>
+            <img src="../img/dest/casintsoc.jpg" width="250" class="align-self-center mr-3" alt="...">
+          </div>
+        </li>
+        <li class="media">
+          <img src="../img/dest/camobr.JPG" class="align-self-center mr-3" width="250" alt="...">
+          <div class="media-body">
+            <h5 class="mt-0 mb-1">Campamentos de obra</h5>
+            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+          </div>
+        </li>
+        <li class="media my-4">
+          <div class="media">
+            <div class="media-body">
+              <h5 class="mt-0 mb-1">Caseta de vigilante</h5>
+              Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+            </div>
+            <img src="../img/dest/casvig.JPG" width="200" class="align-self-center mr-3" alt="...">
+          </div>
+          <li class="media">
+            <img src="../img/dest/cer.jpg" class="align-self-center mr-3" width="200" alt="...">
+            <div class="media-body">
+              <h5 class="mt-0 mb-1">Cerramientos de áreas </h5>
+              Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+            </div>
+          </li>
+          <li class="media my-4">
+            <div class="media">
+              <div class="media-body">
+                <h5 class="mt-0 mb-1">Contenedores de oficinas o bodegas</h5>
+                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+              </div>
+              <img src="../img/dest/bod1.JPG" width="250" class="align-self-center mr-3" alt="...">
+            </div>
+        </li>
+        <li class="media">
+          <img src="../img/dest/aul.jpg" class="align-self-center mr-3" width="250" alt="...">
+          <div class="media-body">
+            <h5 class="mt-0 mb-1">Aulas de clase</h5>
+            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+          </div>
+      </ul>
       </div>
     </div>
   </div>
@@ -104,29 +165,19 @@
         <div class="col-lg-8 col-md-10 mx-auto">
           <ul class="list-inline text-center">
             <li class="list-inline-item">
-              <a href="#">
+              <a target="_blank" href="https://www.youtube.com/channel/UCLhxza72203zpdSIySPLOuQ">
                 <span class="fa-stack fa-lg">
-                  <i class="fas fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
+                  <i class="fab fa-youtube-square" style="font-size: 50px;"></i>
                 </span>
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="#">
+              <a target="_blank" href="https://www.linkedin.com/company/amviestruc">
                 <span class="fa-stack fa-lg">
-                  <i class="fas fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
+                  <i class="fab fa-linkedin" style="font-size: 50px;"></i>
                 </span>
               </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="#">
-                <span class="fa-stack fa-lg">
-                  <i class="fas fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-github fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
+            </li> 
           </ul>
           <p class="copyright text-muted">Copyright &copy; Your Website 2020</p>
         </div>
