--- a/index.html
+++ b/index.html
@@ -55,22 +55,9 @@
                 <a class="dropdown-item" href="sectores/plantaciones-ganaderia/index.html">Plantaciones y ganadería</a>
               </div>
             </li>
-            <!-- ---------------------------------------------- -->
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">soluciones</a>
-              <div class="dropdown-menu">
-                <a class="dropdown-item" href="soluciones/construcciones-pvc/index.html">Construcciones en PVC</a>
-                <a class="dropdown-item" href="soluciones/disenos-estructurales/index.html">Diseño Estructurales</a>
-                <a class="dropdown-item" href="soluciones/consultoria/index.html">Consultoria</a>               
-                <a class="dropdown-item" href="soluciones/estructura-metalicas/index.html">Estructuras Metálicas</a>
-                <a class="dropdown-item" href="soluciones/cubierta-cerramiento/index.html">Cubiertas y Cerramientos</a>
-              </div>
-            </li>
-
-            <!-- <li class="nav-item">
+            <li class="nav-item">
               <a class="nav-link" href="soluciones/index.html">Soluciones</a>
-            </li> -->
-            <!-- ---------------------------------------------- -->
+            </li>
             <li class="nav-item">
               <a class="nav-link" href="experiencias/index.html">Experiencias</a>
             </li>
@@ -148,16 +135,17 @@
         </a>
       </div>
     </div>
-    <div class="container">
-
-    </div>
     <!-- cuerpo principal en grilla -->
     <div id="grillaCuerpo">
       <div class="container" class="containerCuerpoTitulo" style="margin-top: 5%; margin-bottom: 5%; align-items: center;">
         <h2>Intro a Paneles en PVC</h2>
       </div>
-      <iframe width="1280" height="720" src="https://www.youtube.com/embed/09DrX-kq1HI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
+      <div class="container">
+        <iframe src="" frameborder="0"></iframe>
+      </div>
+      <div class="container" class="containerCuerpoTitulo" style="margin-top: 5%; margin-bottom: 5%; align-items: center;">
+        <h2>Nuestro alcance</h2>
+      </div>
                 <!-- el alcance de la empresa -->
       <div class="container">
         <div class="card-deck">
@@ -188,15 +176,47 @@
         </div>
       </div>
       <div>
-        <div class="container">
-
-        </div>
-      </div>
-      <div>
         <!-- imagenes de iconos de clientes -->
-        <div class="container">
+        <div class="container" class="containerCuerpoTitulo" style="margin-top: 5%; margin-bottom: 5%; align-items: center;">
+          <h2>Nuestros Clientes</h2>
 
-        </div>        
+        </div>    
+        <div id="carrusel">
+          <a href="#" class="left-arrow"><img src="images/left-arrow.png" /></a>
+          <a href="#" class="right-arrow"><img src="images/right-arrow.png" /></a>
+          <div class="carrusel">
+              <div class="product" id="product_0">
+                  <img src="gallery/01.jpg" width="195" height="100" />
+                  <h5>Lorem ipsum 1</h5>
+                  <p>165.00 €</p>
+              </div>
+              <div class="product" id="product_1">
+                  <img src="gallery/02.jpg" width="195" height="100" />
+                  <h5>Lorem ipsum 2</h5>
+                  <p>100.00 €</p>
+              </div>
+              <div class="product" id="product_2">
+                  <img src="gallery/03.jpg" width="195" height="100" />
+                  <h5>Lorem ipsum 3</h5>
+                  <p>250.00 €</p>
+              </div>
+              <div class="product" id="product_3">
+                  <img src="gallery/01.jpg" width="195" height="100" />
+                  <h5>Lorem ipsum 4</h5>
+                  <p>75.00 €</p>
+              </div>
+              <div class="product" id="product_4">
+                  <img src="gallery/02.jpg" width="195" height="100" />
+                  <h5>Lorem ipsum 5</h5>
+                  <p>65.00 €</p>
+              </div>
+              <div class="product" id="product_5">
+                  <img src="gallery/03.jpg" width="195" height="100" />
+                  <h5>Lorem ipsum 6</h5>
+                  <p>40.00 €</p>
+              </div>
+          </div>
+      </div>
       </div>
     </div>
 
