--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <img src="img/Inicio/cerramientos.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5 class="letrasInicio">Armonizar con el ambiente</h5>
-              <p class="letrasInicio">Nuestros diseños buscan cumplir con las espectativas del cliente</p>
+              <p>Nuestros diseños buscan cumplir con las espectativas del cliente</p>
             </div>
           </div>
         </div>
@@ -137,13 +137,13 @@
     </div>
     <!-- cuerpo principal en grilla -->
     <div id="grillaCuerpo">
-      <div class="container" class="containerCuerpoTitulo" style="margin-top: 5%; margin-bottom: 5%; align-items: center;">
+      <div class="container" class="containerCuerpoTitulo" style="margin-top: 5%; margin-bottom: 5%; text-align:center;">
         <h2>Intro a Paneles en PVC</h2>
       </div>
-      <div class="container">
+      <div class="container" style="text-align: center;">
           <iframe width="789" height="444" src="https://www.youtube.com/embed/09DrX-kq1HI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
-      <div class="container" class="containerCuerpoTitulo" style="margin-top: 5%; margin-bottom: 5%; align-items: center;">
+      <div class="container" class="containerCuerpoTitulo" style="margin-top: 5%; margin-bottom: 5%; text-align:center;">
         <h2>Nuestro alcance</h2>
       </div>
                 <!-- el alcance de la empresa -->
@@ -154,7 +154,6 @@
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
               <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
             </div>
           </div>
           <div class="card">
@@ -162,7 +161,6 @@
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
               <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
             </div>
           </div>
           <div class="card">
@@ -170,53 +168,57 @@
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
             </div>
           </div>
         </div>
       </div>
       <div>
         <!-- imagenes de iconos de clientes -->
-        <div class="container" class="containerCuerpoTitulo" style="margin-top: 5%; margin-bottom: 5%; align-items: center;">
+        <div class="container" class="containerCuerpoTitulo" style="margin-top: 5%; margin-bottom: 5%; text-align: center;">
           <h2>Nuestros Clientes</h2>
 
         </div>    
-        <div id="carrusel">
-          <a href="#" class="left-arrow"><img src="images/left-arrow.png" /></a>
-          <a href="#" class="right-arrow"><img src="images/right-arrow.png" /></a>
-          <div class="carrusel">
-              <div class="product" id="product_0">
-                  <img src="gallery/01.jpg" width="195" height="100" />
-                  <h5>Lorem ipsum 1</h5>
-                  <p>165.00 €</p>
+        <div class="container">
+          <div id="content" class="col-lg-12">
+            <div id="carrusel">
+              <a href="#" class="left-arrow"><img src="img/Inicio/cliente/left-arrow.png" /></a>
+              <a href="#" class="right-arrow"><img src="img/Inicio/cliente/right-arrow.png" /></a>
+              <div class="carrusel">
+                  <div class="product" id="product_0">
+                      <img src="img/Inicio/cliente/cryogas.png" width="195" height="100" />
+                      <h5>Lorem ipsum 1</h5>
+                      <p>165.00 €</p>
+                  </div>
+                  <div class="product" id="product_1">
+                      <img src="img/Inicio/cliente/dehotel.png" width="195" height="100" />
+                      <h5>Lorem ipsum 2</h5>
+                      <p>100.00 €</p>
+                  </div>
+                  <div class="product" id="product_2">
+                      <img src="img/Inicio/cliente/EE.png" width="195" height="100" />
+                      <h5>Lorem ipsum 3</h5>
+                      <p>250.00 €</p>
+                  </div>
+                  <div class="product" id="product_3">
+                      <img src="img/Inicio/cliente/etec.png" width="195" height="100" />
+                      <h5>Lorem ipsum 4</h5>
+                      <p>75.00 €</p>
+                  </div>
+                  <div class="product" id="product_4">
+                      <img src="img/Inicio/cliente/fundacionmariosantodomingo.png" width="195" height="100" />
+                      <h5>Lorem ipsum 5</h5>
+                      <p>65.00 €</p>
+                  </div>
+                  <div class="product" id="product_5">
+                      <img src="img/Inicio/cliente/fundacionpiesdescalzos.jpg" width="195" height="100" />
+                      <h5>Lorem ipsum 6</h5>
+                      <p>40.00 €</p>
+                  </div>
               </div>
-              <div class="product" id="product_1">
-                  <img src="gallery/02.jpg" width="195" height="100" />
-                  <h5>Lorem ipsum 2</h5>
-                  <p>100.00 €</p>
-              </div>
-              <div class="product" id="product_2">
-                  <img src="gallery/03.jpg" width="195" height="100" />
-                  <h5>Lorem ipsum 3</h5>
-                  <p>250.00 €</p>
-              </div>
-              <div class="product" id="product_3">
-                  <img src="gallery/01.jpg" width="195" height="100" />
-                  <h5>Lorem ipsum 4</h5>
-                  <p>75.00 €</p>
-              </div>
-              <div class="product" id="product_4">
-                  <img src="gallery/02.jpg" width="195" height="100" />
-                  <h5>Lorem ipsum 5</h5>
-                  <p>65.00 €</p>
-              </div>
-              <div class="product" id="product_5">
-                  <img src="gallery/03.jpg" width="195" height="100" />
-                  <h5>Lorem ipsum 6</h5>
-                  <p>40.00 €</p>
-              </div>
+        
+            </div>
           </div>
-      </div>
+        </div>
       </div>
     </div>
 
